added text onto index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Hello, World!</h1>
+        <h1>Hello, World! I am in the alpha branch.</h1>
     </body>
 
 
