--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     </head>
 
     <body>
-        <h1>Test 1</h1>
-        <h2>Test 2</h2>
-        <p></p>
+        <h1>Hello, World</h1>
+        
     </body>
 
 
