added sass to html file

--- a/exercise/yk.html
+++ b/exercise/yk.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="ethan">
+    <div class="yk">
         <div class="welcome">
             <h1>Welcome!</h1>
         </div>
