--- a/pages/home.html
+++ b/pages/home.html
@@ -1,10 +1,53 @@
-<html>
-    <head>
-        <link rel = "stylesheet" href = "../css/styles.css">
-    </head>
+<!DOCTYPE html>
+<html lang="en">
 
-    <body>
-        home
-        <br>Note! Make sure to add styling on your corresponding scss file.
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LinkUp</title>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
+    <link href=" https://fonts.googleapis.com/css2?family=Poiret+One&display=swap " rel="stylesheet">
+    <link rel="stylesheet" href="../css/styles.css">
+</head>
+
+<body>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="#home"> Home </a></li>
+            <li><a href="#about"> About </a></li>
+            <li><a href="#why"> Why LinkUp? </a></li>
+            <li><a href="#faq"> How to LinkUp? </a></li>
+        </ul>
+    </nav>
+
+    <div class="welcome">
+        <h1>Welcome to LinkUp</h1>
+        <h2>Meet and make new friends.</h2>
+    </div>
+
+    <div class="button">
+        <button class="btn btn1">Login</button>
+        <button class="btn btn2">Register</button>
+        <!-- <input type="submit" class="submit" value="Login">
+        <input type="submit" class="submit" value="Register"> -->
+    </div>
+
+
+    <div class="container about" id="about">
+        <h1>ABOUT</h1>
+        <div class="about-me-info">
+            <p>Tred is the next ideal planner that will change the way you organize your tasks.</p>
+        </div>
+    </div>
+
+    <div class="container test" id="test">
+        <h1>TEST</h1>
+        <div class="test-me-info">
+            <p>Tred is the next ideal planner that will change the way you organize your tasks.</p>
+        </div>
+    </div>
+
+
+</body>
+
 </html>
