added sass to home page and edited home page html

--- a/pages/home.html
+++ b/pages/home.html
@@ -15,13 +15,14 @@
         <ul class="nav-links">
             <li><a href="#home"> Home </a></li>
             <li><a href="#about"> About </a></li>
-            <li><a href="#why"> Why LinkUp? </a></li>
-            <li><a href="#faq"> How to LinkUp? </a></li>
+            <li><a href="#login"> Login </a></li>
+            <li><a href="#faq">Features </a></li>
+            <li><a href="#about"> Contact </a></li>
         </ul>
     </nav>
 
     <div class="welcome">
-        <h1>Welcome to LinkUp</h1>
+        <h1>Welcome to <img class="logo" src="../images/linkup_logo.png" alt="logo" /></h1>
         <h2>Meet and make new friends.</h2>
     </div>
 
@@ -31,22 +32,6 @@
         <!-- <input type="submit" class="submit" value="Login">
         <input type="submit" class="submit" value="Register"> -->
     </div>
-
-
-    <div class="container about" id="about">
-        <h1>ABOUT</h1>
-        <div class="about-me-info">
-            <p>Tred is the next ideal planner that will change the way you organize your tasks.</p>
-        </div>
-    </div>
-
-    <div class="container test" id="test">
-        <h1>TEST</h1>
-        <div class="test-me-info">
-            <p>Tred is the next ideal planner that will change the way you organize your tasks.</p>
-        </div>
-    </div>
-
 
 </body>
 
