edited home html and sass html

--- a/pages/home.html
+++ b/pages/home.html
@@ -13,11 +13,11 @@
 <body>
     <nav>
         <ul class="nav-links">
-            <li><a href="#home"> Home </a></li>
-            <li><a href="#about"> About </a></li>
-            <li><a href="#login"> Login </a></li>
-            <li><a href="#faq">Features </a></li>
-            <li><a href="#about"> Contact </a></li>
+            <li><a href="./home.html" target="_self"> Home </a></li>
+            <li><a href="./about.html" target="_self"> About </a></li>
+            <li><a href="./login.html" target="_self"> Login </a></li>
+            <li><a href="./features.html" target="_self">Features </a></li>
+            <li><a href="./contact.html" target="_self"> Contact </a></li>
         </ul>
     </nav>
 
@@ -29,8 +29,6 @@
     <div class="button">
         <button class="btn btn1">Login</button>
         <button class="btn btn2">Register</button>
-        <!-- <input type="submit" class="submit" value="Login">
-        <input type="submit" class="submit" value="Register"> -->
     </div>
 
 </body>
