Set up HTML for about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,10 +1,25 @@
-<html>
-    <head>
-        <link rel = "stylesheet" href = "../css/styles.css">
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href = "../css/styles.css">
+    <title>Why Link-Up</title>
+</head>
+<body>
 
-    <body>
-        about
-        <br>Note! Make sure to add styling on your corresponding scss file.
-    </body>
+    <h1>Why Link Up</h1>
+
+    <div class="bubblesContainer"></div>
+        <div class="bubble one">Fast</div>
+        <div class="bubble one">Simple</div>
+        <div class="bubble two">Modern</div>
+        <div class="bubble three">Safe</div>
+        <div class="bubble two">Easy</div>
+        <div class="bubble three">Free</div>
+        <div class="bubble four">No-Strings Attached</div>
+    </div>
+    
+</body>
 </html>
+
