Added nav bar to about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+    <nav>
+        <a href ="#">Home</a>
+        <a href ="#">About</a>
+        <a href ="#">Why Link-Up</a>
+        <a href ="#">Features</a>
+        <a href ="#"></a>
+    </nav>
     <h1>Why Link Up</h1>
 
     <div class="bubblesContainer"></div>
