added to question.html/scss and created 2 more html pages: question-2 and question-3.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,9 +1,9 @@
-<html>
+<html class="contact-html">
     <head>
         <link rel = "stylesheet" href = "../css/styles.css">
     </head>
 
-    <body>
+    <body class="contact-body">
         <h2>Contact Us!</h2>
         <form class="msg-form">
             <label>Full Name</label><br>
