--- a/pages/question.html
+++ b/pages/question.html
@@ -1,10 +1,16 @@
-<html>
+<html class="question-html">
     <head>
         <link rel = "stylesheet" href = "../css/styles.css">
     </head>
 
-    <body>
-        question
-        <br>Note! Make sure to add styling on your corresponding scss file.
+    <body class="question-body">
+        <h2>Friendship Questionnaire</h2>
+        <div class="question-container">
+            <p class="question-text">Complete this simple questionnaire to get matched up with people with similar qualities/interests!</p>
+            <p class="question-sm-text">Estimated Time: 20 mins</p>
+            <button class="question-back-btn">Back</button>
+            <a href="question-2.html"><button class="question-btn">Let's get matched!</button></a>
+            
+        </div>
     </body>
 </html>
