Added scss to about page (80% complete)

--- a/pages/about.html
+++ b/pages/about.html
@@ -6,27 +6,30 @@
     <link rel = "stylesheet" href = "../css/styles.css">
     <title>Why Link-Up</title>
 </head>
-<body>
+<body class="content">
+    <main>
+        <nav class="navBar">
+            <a class ="link" href ="#">Home</a>
+            <a class ="link" href ="#">About</a>
+            <a class ="link" href ="#">Why Link-Up</a>
+            <a class ="link" href ="#">Features</a>
+        </nav>
+        <h1 class="title">Why Link Up</h1>
 
-    <nav>
-        <a href ="#">Home</a>
-        <a href ="#">About</a>
-        <a href ="#">Why Link-Up</a>
-        <a href ="#">Features</a>
-        <a href ="#"></a>
-    </nav>
-    <h1>Why Link Up</h1>
-
-    <div class="bubblesContainer"></div>
-        <div class="bubble one">Fast</div>
-        <div class="bubble one">Simple</div>
-        <div class="bubble two">Modern</div>
-        <div class="bubble three">Safe</div>
-        <div class="bubble two">Easy</div>
-        <div class="bubble three">Free</div>
-        <div class="bubble four">No-Strings Attached</div>
-    </div>
-    
+        <div class="bubblesContainer">
+            <span class="bubble b1 p1">Fast</span>
+            <div class="bubble b2 p3">Modern</div>
+            <div class="bubble b3 p6">Free</div>
+            <div class="bubble b4 p7">No-Strings <br>Attached</div>
+            <div class="bubble b3 p4">Safe</div>
+            <div class="bubble b1 p2">Simple</div>
+            <div class="bubble b2 p5">Easy</div>
+        </div>
+        <div class= "infoContainer">
+            <div class="infoTitle"> Lorem, ipsum.</div>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam fugit commodi sit error quisquam qui officia temporibus dignissimos ab modi quia facilis, doloremque vitae praesentium enim reiciendis veritatis numquam quaerat eveniet laudantium, culpa non! Inventore provident recusandae ea eius id quam, molestias illum, mollitia nesciunt aperiam, veniam facere. Facilis totam odit cumque? Sapiente, modi fuga officiis quam mollitia molestiae consequuntur, tempora optio neque repellat tenetur dolorem quae officia ullam blanditiis dignissimos iure ratione amet! Eaque, et! Aut?
+        </div>
+    </main>
 </body>
 </html>
 
