added to matcher.html/scss

--- a/pages/matcher.html
+++ b/pages/matcher.html
@@ -1,10 +1,40 @@
-<html>
+<html class="matcher-html">
     <head>
         <link rel = "stylesheet" href = "../css/styles.css">
     </head>
 
-    <body>
-        matcher
-        <br>Note! Make sure to add styling on your corresponding scss file.
+    <body class="matcher-body">
+        <div class="matcher-container">
+            <div class="matcher-card">
+                <div class="profile-pic"></div>
+                <h3>Program: </h3>
+                <h3>Year: </h3>
+                <h3>Age: </h3>
+                <h3>City: </h3>
+            
+            </div>
+            <div class="matcher-info">
+                <h2 class="matcher-name">My name is</h2>
+                <h2>My Interests: </h2>
+                <h2>Bio: </h2>
+                <button class="request-btn">Send Friend Request</button>
+            </div>
+        </div>
+        <div class="matcher-container2">
+            <div class="matcher-favs">
+                <h3>Favourite Foods:</h3>
+                <h3>Favourite Artists:</h3>
+                <h3>Favourite Movies:</h3>
+                <h3></h3>
+            </div>
+            <div class="matcher-links">
+                <div class="link-title">Social Media</div>
+                <div class="links">Instagram: </div>
+                <div class="links">Twitter: </div>
+                <div class="links">Snapchat: </div>
+            </div>
+           
+        </div>
+
     </body>
 </html>
