--- a/pages/question-3.html
+++ b/pages/question-3.html
@@ -20,7 +20,7 @@
             <input type="radio" id="q1-3" name="city" value="q1-3">
             <label for="q1-3">Paris</label><br>
             <input type="radio" id="q1-4" name="city" value="q1-4">
-            <label for="q1-4">Japan</label><br>
+            <label for="q1-4">Tokyo</label><br>
         </form>
     </div>
     <div class="question2-container">
