--- a/pages/about.html
+++ b/pages/about.html
@@ -1,35 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "../css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <title>Why Link-Up</title>
-</head>
-<body class="content">
+  </head>
+  <body class="content">
     <main>
-        <nav class="navBar">
-            <a class ="link" href ="#">Home</a>
-            <a class ="link" href ="#">About</a>
-            <a class ="link" href ="#">Why Link-Up</a>
-            <a class ="link" href ="#">Features</a>
-        </nav>
-        <h1 class="title">Why Link Up</h1>
+      <nav class="navBar">
+        <a class="link" href="#">Home</a>
+        <a class="link" href="#">About</a>
+        <a class="link" href="#">Why Link-Up</a>
+        <a class="link" href="#">Features</a>
+      </nav>
+      <h1 class="title">Why Link Up</h1>
 
-        <div class="bubblesContainer">
-            <span class="bubble b3 p6">Free</span>
-            <span class="bubble b1 p1">Fast</span>
-            <span class="bubble b4 p7">No-Strings <br>Attached</span>
-            <span class="bubble b2 p3">Modern</span>
-            <span class="bubble b3 p4">Safe</span>
-            <span class="bubble b1 p2">Simple</span>
-            <span class="bubble b2 p5">Easy</span>
+      <div class="bubblesContainer">
+        <span class="bubble b3 p6">Free</span>
+        <span class="bubble b1 p1">Fast</span>
+        <span class="bubble b2 p3">Modern</span>
+        <span class="bubble b4 p7">No-Strings <br />Attached</span>
+        <span class="bubble b2 p5">Easy</span>
+        <span class="bubble b1 p2">Simple</span>
+        <span class="bubble b3 p4">Safe</span>
+      </div>
+      <div class="infoContents">
+      <div class="infoContainer">
+        <div class="infoText item">
+          <div class="infoTitle">Lorem, ipsum.</div>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam fugit
+          commodi sit error quisquam qui officia temporibus dignissimos ab modi
+          quia facilis, doloremque vitae praesentium enim reiciendis veritatis
+          numquam quaerat eveniet laudantium, culpa non!
         </div>
-        <div class= "infoContainer">
-            <div class="infoTitle"> Lorem, ipsum.</div>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam fugit commodi sit error quisquam qui officia temporibus dignissimos ab modi quia facilis, doloremque vitae praesentium enim reiciendis veritatis numquam quaerat eveniet laudantium, culpa non! Inventore provident recusandae ea eius id quam, molestias illum, mollitia nesciunt aperiam, veniam facere. Facilis totam odit cumque? Sapiente, modi fuga officiis quam mollitia molestiae consequuntur, tempora optio neque repellat tenetur dolorem quae officia ullam blanditiis dignissimos iure ratione amet! Eaque, et! Aut?
+        <div class="infoImage item">
+          <img
+            class="aboutImages"
+            src="/Link-Up/images/aboutp1.jpeg"
+            alt="Test"
+          />
         </div>
+    
+       </div>
+       <span
+       ><button class="buttonAbout" type="button" id="lClick">
+         <img
+           class="buttonImage"
+           src="../icons/leftPointCircle.png"
+           alt="Arrow pointing to the left"
+         /></button
+     ></span>
+     <span><button class="buttonAbout" type="button" id="rClick">
+         <img
+           class="buttonImage"
+           src="../icons/rightPointCircle.png"
+           alt="Arrow pointing to the right"
+         /></button>
+     </span>
+    </div>
+    
     </main>
-</body>
+  </body>
 </html>
-
