Fixed padding in nav bar

--- a/pages/about.html
+++ b/pages/about.html
@@ -9,13 +9,16 @@
   <body class="content">
     <main>
       <nav class="navBar">
-        <a class="link" href="#">Home</a>
-        <a class="link" href="#">About</a>
-        <a class="link" href="#">Why Link-Up</a>
-        <a class="link" href="#">Features</a>
+        <ul class= "navLinks">
+            <li class="link"><a class="link" href="#">Home</a></li>
+            <li class="link"><a class="link" href="#">About</a></li>
+            <li class="link"><a class="link" href="#">Login</a></li>
+            <li class="link"><a class="link" href="#">Features</a></li>
+            <li class="link"><a class="link" href="#">Contact</a></li>
+        </ul>
+
       </nav>
       <h1 class="title">Why Link Up</h1>
-
       <div class="bubblesContainer">
         <span class="bubble b3 p6">Free</span>
         <span class="bubble b1 p1">Fast</span>
