--- a/pages/features.html
+++ b/pages/features.html
@@ -1,10 +1,39 @@
-<html>
-    <head>
-        <link rel = "stylesheet" href = "../css/styles.css">
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href = "../css/styles.css">
+    <title>Features</title>
+</head>
+<body class="content">
+    <nav class="navBar">
+        <ul class= "navLinks">
+            <li class="link"><a class="link" href="#">Home</a></li>
+            <li class="link"><a class="link" href="#">About</a></li>
+            <li class="link"><a class="link" href="#">Login</a></li>
+            <li class="link"><a class="link" href="#">Features</a></li>
+            <li class="link"><a class="link" href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <h1 class="title">Features</h1>
+    <div class="featureContainer">
+        <div class="featureInfo item">
+            <div class="featureTitle">Lorem, ipsum.</div>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem, deleniti porro! Ipsum magni sint exercitationem eos nemo quasi suscipit minus!
 
-    <body>
-        features
-        <br>Note! Make sure to add styling on your corresponding scss file.
-    </body>
+        </div>
+        <div class="item">
+            <img class="featureImage" src="../images/featuresp1.jpg"/>
+        </div>
+    </div>
+    <div class="buttonContainer">
+        <button class="featureButton" id="f1"></button>
+        <button class="featureButton" id="f2"></button>
+        <button class="featureButton" id="f3"></button>
+        <button class="featureButton" id="f4"></button>
+        <button class="featureButton" id="f5"></button>
+        <button class="featureButton" id="f6f"></button>
+    </div>
+</body>
 </html>
