Modified css on features and about page. Started html and css for profile page.

--- a/pages/about.html
+++ b/pages/about.html
@@ -9,14 +9,13 @@
   <body class="content">
     <main>
       <nav class="navBar">
-        <ul class= "navLinks">
-            <li class="link"><a class="link" href="#">Home</a></li>
-            <li class="link"><a class="link" href="#">About</a></li>
-            <li class="link"><a class="link" href="#">Login</a></li>
-            <li class="link"><a class="link" href="#">Features</a></li>
-            <li class="link"><a class="link" href="#">Contact</a></li>
+        <ul class="navLinks">
+          <li class="link"><a class="link" href="#">Home</a></li>
+          <li class="link"><a class="link" href="#">About</a></li>
+          <li class="link"><a class="link" href="#">Login</a></li>
+          <li class="link"><a class="link" href="#">Features</a></li>
+          <li class="link"><a class="link" href="#">Contact</a></li>
         </ul>
-
       </nav>
       <h1 class="title">Why Link Up</h1>
       <div class="bubblesContainer">
@@ -29,40 +28,40 @@
         <span class="bubble b3 p4">Safe</span>
       </div>
       <div class="infoContents">
-      <div class="infoContainer">
-        <div class="infoText item">
-          <div class="infoTitle">Lorem, ipsum.</div>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam fugit
-          commodi sit error quisquam qui officia temporibus dignissimos ab modi
-          quia facilis, doloremque vitae praesentium enim reiciendis veritatis
-          numquam quaerat eveniet laudantium, culpa non!
+        <div class="infoContainer">
+          <div class="infoText item">
+            <div class="infoTitle">Lorem, ipsum.</div>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
+            fugit commodi sit error quisquam qui officia temporibus dignissimos
+            ab modi quia facilis, doloremque vitae praesentium enim reiciendis
+            veritatis numquam quaerat eveniet laudantium, culpa non!
+          </div>
+          <div class="infoImage item">
+            <img
+              class="aboutImages"
+              src="/Link-Up/images/aboutp1.jpeg"
+              alt="Test"
+            />
+          </div>
         </div>
-        <div class="infoImage item">
-          <img
-            class="aboutImages"
-            src="/Link-Up/images/aboutp1.jpeg"
-            alt="Test"
-          />
-        </div>
-    
-       </div>
-       <span
-       ><button class="buttonAbout" type="button" id="lClick">
-         <img
-           class="buttonImage"
-           src="../icons/leftPointCircle.png"
-           alt="Arrow pointing to the left"
-         /></button
-     ></span>
-     <span><button class="buttonAbout" type="button" id="rClick">
-         <img
-           class="buttonImage"
-           src="../icons/rightPointCircle.png"
-           alt="Arrow pointing to the right"
-         /></button>
-     </span>
-    </div>
-    
+        <span
+          ><button class="buttonAbout" type="button" id="lClick">
+            <img
+              class="buttonImage"
+              src="../icons/leftPointCircle.png"
+              alt="Arrow pointing to the left"
+            /></button
+        ></span>
+        <span
+          ><button class="buttonAbout" type="button" id="rClick">
+            <img
+              class="buttonImage"
+              src="../icons/rightPointCircle.png"
+              alt="Arrow pointing to the right"
+            />
+          </button>
+        </span>
+      </div>
     </main>
   </body>
 </html>
