created the question-submit page and question.js, also fixed some styling

--- a/pages/question-3.html
+++ b/pages/question-3.html
@@ -77,6 +77,6 @@
     </div>
     <br>
     <a href="question-2.html"><button class="question2-back-btn">Back</button></a>
-    <a href="#"><button class="question2-btn">Submit Questionnaire</button></a>
+    <a href="question-submit.html"><button class="question2-btn">Submit Questionnaire</button></a>
 </body>
 </html>
