--- a/pages/profile.html
+++ b/pages/profile.html
@@ -112,8 +112,16 @@
             </div>
         </div>
         <section class ="linksContent">
+          <section class="linkTitle">
+              <p>Links | <span class="numOfLinks">-</span></p>
+
+          </section>
+          <section class="mostRecentThree">
+          <div class="item"> 1</div>
+          <div class="item"> 2</div>
+          <div class="item"> 3</div>
+          </section>
         
-        Lorem ipsum dolor sit amet.
         </section>
     </section>
     
