added nav bar functionality to about, contact, features, home

--- a/pages/features.html
+++ b/pages/features.html
@@ -9,11 +9,11 @@
   <body class="content">
     <nav class="navBar">
       <ul class="navLinks">
-        <li class="link"><a class="link" href="#">Home</a></li>
-        <li class="link"><a class="link" href="#">About</a></li>
-        <li class="link"><a class="link" href="#">Login</a></li>
-        <li class="link"><a class="link" href="#">Features</a></li>
-        <li class="link"><a class="link" href="#">Contact</a></li>
+          <li class="link"><a href="./home.html" class="link">Home</a></li>
+          <li class="link"><a href="./about.html" class="link">About</a></li>
+          <li class="link"><a href="./login.html" class="link">Login</a></li>
+          <li class="link"><a href="./features.html" class="link">Features</a></li>
+          <li class="link"><a href="./contact.html" class="link">Contact</a></li>
       </ul>
     </nav>
     <h1 class="title animateFadein">Features</h1>
