--- a/pages/home.html
+++ b/pages/home.html
@@ -11,15 +11,15 @@
 </head>
 
 <body>
-    <nav>
-        <ul class="nav-links">
-            <li><a href="./home.html" target="_self"> Home </a></li>
-            <li><a href="./about.html" target="_self"> About </a></li>
-            <li><a href="./login.html" target="_self"> Login </a></li>
-            <li><a href="./features.html" target="_self">Features </a></li>
-            <li><a href="./contact.html" target="_self"> Contact </a></li>
+    <nav class="navBar">
+        <ul class="navLinks">
+          <li class="link"><a href="./home.html" class="link">Home</a></li>
+          <li class="link"><a href="./about.html" class="link">About</a></li>
+          <li class="link"><a href="./login.html" class="link">Login</a></li>
+          <li class="link"><a href="./features.html" class="link">Features</a></li>
+          <li class="link"><a href="./contact.html" class="link">Contact</a></li>
         </ul>
-    </nav>
+      </nav>
 
     <div class="welcome">
         <h1>Welcome to <img class="logo" src="../images/linkup_logo.png" alt="logo" /></h1>
