--- a/pages/login.html
+++ b/pages/login.html
@@ -4,6 +4,15 @@
     </head>
 
     <body>
+        <nav class="navBar">
+            <ul class="navLinks">
+              <li class="link"><a href="./home.html" class="link">Home</a></li>
+              <li class="link"><a href="./about.html" class="link">About</a></li>
+              <li class="link"><a href="./login.html" class="link">Login</a></li>
+              <li class="link"><a href="./features.html" class="link">Features</a></li>
+              <li class="link"><a href="./contact.html" class="link">Contact</a></li>
+            </ul>
+          </nav>
         login
         <br>Note! Make sure to add styling on your corresponding scss file.
     </body>
