--- a/pages/question-3.html
+++ b/pages/question-3.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" class="question-html">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel = "stylesheet" href = "../css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
 </head>
+
 <body class="question-body">
     <h2>Friendship Questionnaire</h2>
+    <form action = "../scripts/submit.php" method = "POST">
     <h2 class="question-st">Multiple Choice</h2>
     <div class="question2-container">
+
         <p class="question2-text">If you could live anywhere, where would you live?</p>
-        <form class="question-form">
+        <div class="question-form">
             <input type="radio" id="q1-1" name="city" value="q1-1">
             <label for="q1-1">New York</label><br>
             <input type="radio" id="q1-2" name="city" value="q1-2">
@@ -21,22 +25,24 @@
             <label for="q1-3">Paris</label><br>
             <input type="radio" id="q1-4" name="city" value="q1-4">
             <label for="q1-4">Tokyo</label><br>
-        </form>
+        </div>
     </div>
+
     <div class="question2-container">
         <p class="question2-text">What’s your decision-making style?</p>
-        <form class="question-form">
+        <div class="question-form">
             <input type="radio" id="q2-1" name="decision" value="q2-1">
             <label for="q2-1">I often put off making decisions</label><br>
             <input type="radio" id="q2-2" name="decision" value="q2-2">
             <label for="q2-2">I spend a lot of time writing pros and cons before making a decision</label><br>
             <input type="radio" id="q2-3" name="decision" value="q2-3">
             <label for="q2-3">I trust myself to make decisions quickly and easily </label><br>
-        </form>
+        </div>
     </div>
+
     <div class="question2-container">
         <p class="question2-text">Which best describes your fashion style?</p>
-        <form class="question-form">
+        <div class="question-form">
             <input type="radio" id="q3-1" name="fashion" value="q3-1">
             <label for="q3-1">Bold</label><br>
             <input type="radio" id="q3-2" name="fashion" value="q3-2">
@@ -45,12 +51,12 @@
             <label for="q3-3">Minimal</label><br>
             <input type="radio" id="q3-4" name="fashion" value="q3-4">
             <label for="q3-4">Trendy</label><br>
-        </form>
+        </div>
     </div>
 
     <div class="question2-container">
         <p class="question2-text">What is your favorite social media?</p>
-        <form class="question-form">
+        <div class="question-form">
             <input type="radio" id="q4-1" name="socialmedia" value="q4-1">
             <label for="q4-1">Tiktok</label><br>
             <input type="radio" id="q4-2" name="socialmedia" value="q4-2">
@@ -59,12 +65,12 @@
             <label for="q4-3">Twitter</label><br>
             <input type="radio" id="q4-4" name="socialmedia" value="q4-4">
             <label for="q4-4">Linkedin</label><br>
-        </form>
+        </div>
     </div>
 
     <div class="question2-container">
         <p class="question2-text">What's your favourite music genre?</p>
-        <form class="question-form">
+        <div class="question-form">
             <input type="radio" id="q5-1" name="music" value="q5-1">
             <label for="q5-1">Pop</label><br>
             <input type="radio" id="q5-2" name="music" value="q5-2">
@@ -73,10 +79,14 @@
             <label for="q5-3">Indie</label><br>
             <input type="radio" id="q5-4" name="music" value="q5-4">
             <label for="q5-4">EDM/Electronic</label><br>
-        </form>
+        </div>
+
+
     </div>
-    <br>
-    <a href="question-2.html"><button class="question2-back-btn">Back</button></a>
-    <a href="question-submit.html"><button class="question2-btn">Submit Questionnaire</button></a>
+        <br>
+        <a href="question-2.html"><button class="question2-back-btn">Back</button></a>
+        <a href="question-submit.html"><input type="submit" button class="question2-btn"></button></a>
+    </form>
 </body>
+
 </html>
