--- a/pages/matcher.html
+++ b/pages/matcher.html
@@ -1,9 +1,11 @@
 <html class="matcher-html">
     <head>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel = "stylesheet" href = "../css/styles.css">
     </head>
 
     <body class="matcher-body">
+
         <div class="matcher-container">
             <div class="matcher-card">
                 <div class="profile-pic"></div>
@@ -35,6 +37,21 @@
             </div>
            
         </div>
+
+        <div class="card mb-3" style="max-width: 540px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="..." class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
 
     </body>
 </html>
