Profile page 90% and fully responsive

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -141,22 +141,22 @@
         </section>
         <section class ="BottomContainer">
 
-        <div class="itemB">
+        <div class="itemB hideQuestionaire">
           <div class="placement">
-            <img src="../icons/questionResults.png"/>
             <p>Questionaire Results</p> 
           </div>
           <div class="questionaireContainer">
+            <img src="../icons/questionResults.png"/><br>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, facere!
           </div>
 
       </div>
       <div class="itemB">
         <div class="placement">
-          <img src="../icons/socialMedia.png"/>
           <p>Social Media</p>
           </div>
           <div class="socialMediaContainer">
+            <!-- <img src="../icons/socialMedia.png"/><br> -->
             <div class="media">Tiktok</div>
             <span class="userTiktok">@tiktok</span>
             <div class="media">Twitter</div>
@@ -164,7 +164,7 @@
             <div class="media">Instgram</div>
             <span class="userTiktok">@instagram</span>
             <div class="media">Snapchat</div>
-            <span class="userSnapchat"> @snpachat</span>
+            <span class="userSnapchat"> @snapchat</span>
           </div>
 
       </div>
