Feature page is now responsive.

--- a/pages/features.html
+++ b/pages/features.html
@@ -27,6 +27,51 @@
       <div class="item">
         <img class="featureImage" src="../images/featuresp1.jpg" />
       </div>
+      <div class="MobileView">
+        <div class="featureInfo item">
+          <div class="featureTitle">Lorem, ipsum.</div>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+          deleniti porro! Ipsum magni sint exercitationem eos nemo quasi suscipit
+          minus!
+        </div>
+        <div class="item">
+          <img class="featureImage" src="../images/featuresp1.jpg" />
+        </div>
+        <div class="featureInfo item">
+          <div class="featureTitle">Lorem, ipsum.</div>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+          deleniti porro! Ipsum magni sint exercitationem eos nemo quasi suscipit
+          minus!
+        </div>
+        <div class="item">
+          <img class="featureImage" src="../images/featuresp1.jpg" />
+        </div>
+        <div class="featureInfo item">
+          <div class="featureTitle">Lorem, ipsum.</div>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+          deleniti porro! Ipsum magni sint exercitationem eos nemo quasi suscipit
+          minus!
+        </div>
+        <div class="item">
+          <img class="featureImage" src="../images/featuresp1.jpg" />
+        </div>
+        <div class="featureInfo item">
+          <div class="featureTitle">Lorem, ipsum.</div>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+          deleniti porro! Ipsum magni sint exercitationem eos nemo quasi suscipit
+          minus!
+        </div>
+        <div class="item">
+          <img class="featureImage" src="../images/featuresp1.jpg" />
+        </div>
+
+
+
+
+
+
+
+      </div>
     </div>
     <div class="buttonContainer">
       <button class="featureButton" id="f1"></button>
